# Spicy

./: .gitignore  README.md
iletter_api/: Cargo.toml
iletter_api/assests/: iletter_db.sql  iletter_db_data.sql
iletter_api/persistence/entity/: Cargo.toml
iletter_api/persistence/entity/src/: book.rs  book_lot.rs  branch_office.rs  inventory.rs  lib.rs  manager.rs  prelude.rs  worker.rs
iletter_api/persistence/migration/: Cargo.toml
iletter_api/persistence/migration/src/: lib.rs  m20230521_030921_initial.rs
iletter_api/src/: persistence.rs
spicy_api/: .env  Cargo.toml
spicy_api/persistence/entity/: Cargo.toml
spicy_api/persistence/entity/src/: auditing.rs  lib.rs  likes.rs  prelude.rs  recipe.rs  recipe_image.rs  role.rs  user.rs  user_profile.rs  user_role.rs
spicy_api/persistence/migration/: Cargo.toml
spicy_api/persistence/migration/src/: lib.rs
spicy_api/persistence/service/: Cargo.toml
spicy_api/persistence/service/src/: auditing.rs  lib.rs  likes.rs  recipe.rs  recipe_image.rs  role.rs  user.rs  user_profile.rs
spicy_api/persistence/service/testdata/: auditing_data.json  recipe_data.json  recipe_image_data.json  role_data.json  user_data.json  user_profile_data.json
spicy_api/persistence/service/testdata/relations/: likes_data.json  recipe_user_data.json  user_role_data.json
spicy_api/persistence/service/tests/: auditing_test.rs  recipe_relations_test.rs  recipe_test.rs  user_entity_test.rs  user_profile_test.rs  user_test.rs
spicy_api/persistence/service/tests/common/: mod.rs
spicy_api/settings/: dev-settings.toml  dev-settings.yaml  prod-settings.toml  prod-settings.yaml  settings.toml  settings.yaml
spicy_api/src/: auth.rs  error.rs  init.rs  lib.rs  main.rs  middleware.rs  payload.rs  persistence.rs  routes.rs  settings.rs  utils.rs
spicy_api/src/auth/: password.rs  token.rs
spicy_api/src/payload/: recipe_payload.rs  user_payload.rs
spicy_api/src/routes/: health_check.rs  session.rs  sessions.rs  users.rs
spicy_api/src/routes/users/: users_likes.rs  users_recipes.rs
