[package]
name = "iletter_api"
authors.workspace = true
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
actix-web = "4.3.1"
anyhow = "1.0.71"
dotenvy = "0.15.7"
listenfd = "1.0.1"

entity = { path = "persistence/entity" }
migration = { path = "persistence/migration" }

[workspace]
members = ["persistence/*"]

[workspace.package]
authors = ["MrFixThis <mrfixthis55@gmail.com>"]
