[package]
name = "spicy_api"
authors.workspace = true
version = "0.1.0"
edition = "2021"

[lib]
name = "spicy_src"
path = "src/lib.rs"

[workspace]
members = ["persistence/*"]

[workspace.package]
authors = ["MrFixThis <mrfixthis55@gmail.com>"]

[workspace.dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.71"
pretty_assertions = "1.3.0"

[dependencies]
actix-web = "4.3.1"
actix-multipart = { version = "0.6.0", features = ["actix-multipart-derive"] }
actix-web-lab = "0.19.1"
actix-files = "0.6.2"
actix-cors = "0.6.4"
tokio = { version = "1.28.2", features = ["rt", "fs"] }
serde.workspace = true
serde_json.workspace = true
config = "0.13.3"
dotenvy = "0.15.7"
argon2 = "0.5.0"
chrono = "0.4.26"
pasetors = "0.6.6"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "serde"] }
listenfd = "1.0.1"
thiserror = "1.0.40"
anyhow.workspace = true
# Path deps
entity = { path = "persistence/entity" }
service = { path = "persistence/service" }
migration = { path = "persistence/migration" }

[dev-dependencies]
pretty_assertions.workspace = true
