[package]
name = "entity"
version = "0.1.0"
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sea-orm]
version = "0.11.3"
features = [
    "sqlx-mysql",
    "runtime-actix-native-tls",
    "chrono",
    "uuid",
]
