[package]
name = "service"
version = "0.1.0"
authors.workspace = true
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait = "0.1.68"
entity = { path = "../entity/" }

[dependencies.sea-orm]
version ="0.11.3"
features = [
    "runtime-actix-rustls",
    "sqlx-mysql",
    "debug-print"
]

[dev-dependencies.tokio]
version = "1.28.1"
features = ["macros", "rt"]

[features]
mock = ["sea-orm/mock"]

# [[test]]
# name = ""
# required-features = ["mock"]
