[package]
name = "service"
version = "0.1.0"
authors.workspace = true
edition = "2021"

[dependencies]
async-trait = "0.1.68"
entity = { path = "../entity/" }

[dependencies.sea-orm]
version ="0.11.3"
features = [
    "runtime-actix-rustls",
    "sqlx-mysql",
    "debug-print",
]

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.28.1", features = ["macros", "rt"] }
pretty_assertions.workspace = true
anyhow.workspace = true

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "user_test"
required-features = ["mock"]

[[test]]
name = "user_profile_test"
required-features = ["mock"]

[[test]]
name = "recipe_test"
required-features = ["mock"]
